--- a/src/css/user/user_otp.css
+++ b/src/css/user/user_otp.css
@@ -1,91 +1,90 @@
 /* UserOtp.css */
 
 .otp-page-container {
-    position: relative;
-    background-image: url('/images/login.jpg');
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .otp-page-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-  }
-  
-  .otp-box {
-    background-color: transparent;
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
-    z-index: 2;
-    max-width: 400px;
-    width: 100%;
-  }
-  
-  .otp-title {
-    font-size: 1.5rem;
-    color: #cccccc;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  
-  .otp-caption {
-    font-size: 0.875rem;
-    color: #fff;
-    margin-bottom: 2rem;
-    text-align: center;
-  }
-  
-  .otp-input-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 1.5rem;
-  }
-  
-  .otp-input {
-    width: 3rem;
-    height: 3rem;
-    background-color: transparent;
-    margin: 0 0.5rem;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    text-align: center;
-    font-size: 1.25rem;
-    transition: border-color 0.3s ease;
-  }
-  
-  .otp-input:focus {
-    border-color: #007bff;
-    outline: none;
-  }
-  
-  .otp-button {
-    width: 100%;
-    padding: 0.75rem;
-    background-color: #6841128b;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .otp-button:hover {
-    background-color: #7d642f;
-  }
-  
+  position: relative;
+  background-image: url("/images/login.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.otp-page-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.otp-box {
+  background-color: transparent;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 2;
+  max-width: 400px;
+  width: 100%;
+}
+
+.otp-title {
+  font-size: 1.5rem;
+  color: #cccccc;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.otp-caption {
+  font-size: 0.875rem;
+  color: #fff;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.otp-input-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.otp-input {
+  width: 3rem;
+  height: 3rem;
+  background-color: transparent;
+  margin: 0 0.5rem;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  text-align: center;
+  font-size: 1.25rem;
+  transition: border-color 0.3s ease;
+}
+
+.otp-input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.otp-button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #6841128b;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.otp-button:hover {
+  background-color: #7d642f;
+}
