--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,5 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
-/* For Webkit browsers (Chrome, Safari, Edge) */
-.overflow-y-scroll::-webkit-scrollbar {
-  width: 12px;
-}
 
-.overflow-y-scroll::-webkit-scrollbar-track {
-  background: #734c4c;
-  border-radius: 10px;
-}
-
-.overflow-y-scroll::-webkit-scrollbar-thumb {
-  background: #734c4c;
-  border-radius: 10px;
-}
-
-.overflow-y-scroll::-webkit-scrollbar-thumb:hover {
-  background: #4e3434;
-}
-
-/* For Firefox */
-.overflow-y-scroll {
-  scrollbar-width: thin;
-  scrollbar-color: #734c4c #f1f1f1;
-}
-
-.transition-width {
-  transition: width 0.3s ease;
-}
-
-.scrollbar-hide {
-  -ms-overflow-style: none;
-  /* Internet Explorer 10+ */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-  /* Safari and Chrome */
-}
