--- a/src/css/admin/admin_sidebar.css
+++ b/src/css/admin/admin_sidebar.css
@@ -1,93 +1,55 @@
-/* AdminSidebar Styles */
 
-/* Sidebar */
 .admin-sidebar {
-  width: 250px;
-  background-color: #343a40;
-  color: white;
-  padding-top: 20px;
   position: fixed;
-  top: 56px; /* Aligns with the height of the navbar */
-  left: -250px; /* Initially hidden off-screen */
-  height: calc(100% - 56px); /* Full height minus navbar height */
-  z-index: 1000;
-  transition: left 0.3s ease; /* Transition when toggling */
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: 999;
+  overflow: hidden;
+  transition: width 0.3s ease;
 }
 
 .admin-sidebar.open {
-  left: 0; /* Slide in when open */
+  width: 250px;
 }
 
-.sidebar-nav {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.admin-sidebar.closed {
+  width: 0;
 }
 
-.nav-item {
-  padding: 10px;
-}
-
-.nav-item .nav-link {
-  color: white;
-  text-decoration: none;
-  padding: 10px 20px;
-  display: block;
-  transition:
-    background-color 0.15s ease,
-    padding 0.15s ease;
-}
-
-.dropdown-menu {
-  padding-left: 15px;
-  background-color: #343a40;
-  color: white;
-  border: none;
-}
-
-.dropdown-menu .nav-link {
-  padding-left: 30px;
-  transition:
-    background-color 0.15s ease,
-    padding-left 0.15s ease; /* Match hover transition */
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  .admin-sidebar {
-    top: 56px; /* Aligns with the height of the navbar */
-    height: calc(100% - 56px); /* Full height minus navbar height */
-  }
-
-  .sidebar-nav .nav-item .nav-link {
-    padding: 10px 15px;
-  }
-
-  .sidebar-nav .nav-item .nav-link:hover {
-    padding-left: 15px; /* Adjusted padding for smaller screens */
-  }
-
-  .dropdown-menu .nav-link {
-    padding-left: 15px;
-  }
-}
-
-/* Smooth Transition for Sidebar Toggle */
-.admin-sidebar,
-.nav-item .nav-link,
-.dropdown-menu .nav-link {
-  transition:
-    left 0.3s ease,
-    padding-left 0.15s ease;
-}
-
-/* Adjustments for Dropdown Arrows */
-.nav-item.dropdown .nav-link {
+.sidebar-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
+  background-color: #1a202c; /* Tailwind's gray-900 */
+}
+/* 
+.nav-item {
+  margin-bottom: 1rem;
+  transition: all 0.3s ease;
 }
 
-.nav-item.dropdown .nav-link svg {
-  margin-left: 5px;
+.nav-item:hover {
+  background-color: #2d3748; /* Tailwind's gray-700 */
+  /* border-radius: 0.5rem;
 }
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  color: #ffffff;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+} */
+
+/* .nav-link:hover {
+  background-color: #4a5568; /* Tailwind's gray-600 */
+  /* border-radius: 0.5rem;
+}
+
+.nav-text {
+  font-weight: 600;
+} */ 
