--- a/src/css/common/Header.css
+++ b/src/css/common/Header.css
@@ -3,15 +3,23 @@
   background: linear-gradient(135deg, rgba(0, 0, 0, 0.986), rgba(0, 0, 0, 0.8));
   /* backdrop-filter: blur(10px); */
   padding: 0.6rem 1.5rem;
-  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition:
+    background-color 0.3s ease-in-out,
+    box-shadow 0.3s ease-in-out;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.829);
 }
 
 .navbar .submenu {
-  background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(51, 51, 51, 0.8));
+  background: linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 0.8),
+    rgba(51, 51, 51, 0.8)
+  );
   /* backdrop-filter: blur(10px); */
   padding: 0.8rem 1.5rem;
-  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition:
+    background-color 0.3s ease-in-out,
+    box-shadow 0.3s ease-in-out;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.759);
 }
 
@@ -35,12 +43,13 @@
   z-index: 1030;
 }
 
-
 .navbar-brand .brand-text {
   font-weight: 800;
   font-size: 2rem;
   color: #0096c7;
-  transition: color 0.3s ease, text-shadow 0.3s ease;
+  transition:
+    color 0.3s ease,
+    text-shadow 0.3s ease;
   /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7),
     0 0 25px rgba(0, 217, 255, 0.8); */
 }
@@ -48,10 +57,10 @@
 /* Add a hover effect */
 .navbar-brand .brand-text:hover {
   color: #0096c7;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
+  text-shadow:
+    2px 2px 4px rgba(0, 0, 0, 0.5),
     0 0 30px rgba(0, 217, 255, 1);
 }
-
 
 .navbar-brand .text-highlight {
   color: #00d9ff;
@@ -68,7 +77,10 @@
   padding: 0.8rem 1.2rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
-  transition: color 0.3s ease, border-bottom 0.3s ease, transform 0.3s ease;
+  transition:
+    color 0.3s ease,
+    border-bottom 0.3s ease,
+    transform 0.3s ease;
 }
 
 .nav-link:hover {
