--- a/src/css/admin/admin_sidebar.css
+++ b/src/css/admin/admin_sidebar.css
@@ -1,4 +1,3 @@
-
 .admin-sidebar {
   position: fixed;
   top: 0;
@@ -6,7 +5,7 @@
   height: 100%;
   z-index: 999;
   overflow: hidden;
-  transition: width 0.3s ease;
+  /* transition: width 0.3s ease; */
 }
 
 .admin-sidebar.open {
@@ -32,7 +31,7 @@
 
 .nav-item:hover {
   background-color: #2d3748; /* Tailwind's gray-700 */
-  /* border-radius: 0.5rem;
+/* border-radius: 0.5rem;
 }
 
 .nav-link {
@@ -47,9 +46,9 @@
 
 /* .nav-link:hover {
   background-color: #4a5568; /* Tailwind's gray-600 */
-  /* border-radius: 0.5rem;
+/* border-radius: 0.5rem;
 }
 
 .nav-text {
   font-weight: 600;
-} */ 
+} */
