--- a/src/css/user/user_login.css
+++ b/src/css/user/user_login.css
@@ -27,7 +27,7 @@
   z-index: 2;
   max-width: 500px;
   width: 100%;
-  background-color: rgb(0, 0, 0); /* Slightly transparent background */
+  background-color: rgba(0, 0, 0, 0.645); /* Slightly transparent background */
   /* backdrop-filter: blur(8px); Blur effect */
   padding: 40px;
   border-radius: 10px;
@@ -78,7 +78,7 @@
 .primary-login-btn:hover {
   background-color: #0d252c;
   color: #fff;
-  transform: translateY(-3px) scale(1.05);
+  /* transform: translateY(-3px) scale(1.05); */
 }
 
 /* Google Login Button */
@@ -92,7 +92,7 @@
   background-color: #f0f2f5;
   color: #030303;
   border: 2px solid #f3f4f7;
-  transform: translateY(-3px) scale(1.05);
+  /* transform: translateY(-3px) scale(1.05); */
 }
 
 /* Signup Button */
@@ -107,7 +107,7 @@
 .signup-btn:hover {
   color: #0d252c;
   text-decoration: underline;
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
 }
 
 .login-form-input .form-control {
